@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH VOIKKOSPELL 1 "2010-05-03"
+.TH VOIKKOSPELL 1 "2010-05-11"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -35,6 +35,9 @@ Prints morphological analysis info (A:) for recognized words.
 .TP
 .B \-t
 Prints only "C" or "W" instead of typical full output.
+.TP
+.B \-tt
+Prints only misspelled words.
 .TP
 .B \-s
 Prints suggestions (S:) for incorrectly spelled words.
